--- a/frontend/src/app/recomendacao-form/recomendacao-form.component.html
+++ b/frontend/src/app/recomendacao-form/recomendacao-form.component.html
@@ -1,1 +1,27 @@
-<p>recomendacao-form works!</p>
+<mat-card>
+  <form (submit)="onSalvarRecomendacao(recomendacaoForm)"  #recomendacaoForm="ngForm">
+
+
+  <mat-form-field
+      appearance="fill">
+      <mat-label>Digite a recomendação</mat-label>
+      <input
+          matInput
+          type="text"
+          [ngModel]="recomendacao?.descricao"
+          name="descricao"
+          required
+          minlength="3"
+          />
+      <button
+          *ngIf="true"
+          matSuffix
+          mat-icon-button
+          >
+          <mat-icon>close</mat-icon>
+      </button>
+      <mat-error>Pelo menos 3 caracteres</mat-error>
+  </mat-form-field>
+  <button mat-stroked-button >Salvar</button>
+</form>
+</mat-card>
