--- a/frontend/src/app/recomendacao-listar/recomendacao-listar.component.html
+++ b/frontend/src/app/recomendacao-listar/recomendacao-listar.component.html
@@ -13,10 +13,10 @@
   <ng-container matColumnDef="acoes">
     <th mat-header-cell *matHeaderCellDef>Ações</th>
     <td mat-cell *matCellDef="let element">
-      <a mat-button routerLink="/criar" routerLinkActive="mat-accent">
+      <a mat-button [routerLink]="['editar', element.id]" routerLinkActive="mat-accent">
         <mat-icon>edit</mat-icon>
       </a>
-      <a mat-button routerLink="/criar" routerLinkActive="mat-accent">
+      <a mat-button (click)="onDeletarRecomendacao(element.id)" routerLinkActive="mat-accent">
         <mat-icon>delete</mat-icon>
       </a>
     </td>
