refactor: remove autocomplete input

--- a/frontend/src/app/recomendacao-form/recomendacao-form.component.html
+++ b/frontend/src/app/recomendacao-form/recomendacao-form.component.html
@@ -4,6 +4,7 @@
       appearance="fill">
       <mat-label>Digite a recomendação</mat-label>
       <input
+          autocomplete="off"
           matInput
           type="text"
           [ngModel]="recomendacao?.descricao"
